# azure-search-openai-demo

./: pyproject.toml
