[tool.poetry]
name = "test"
version = "0.1.0"
description = "test"
authors = ["Chaitanya <chaitanya200104@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"] # line too long, multiple statements on one line
src = ["app/backend"]

[tool.black]
line-length = 300

[tool.pytest.ini_options]
addopts = "-ra --cov"
pythonpath = ["app/backend"]

[tool.coverage.paths]
source = ["scripts", "app"]

[tool.coverage.report]
show_missing = true
